--- a/treechipi/config_07.json
+++ b/treechipi/config_07.json
@@ -5,9 +5,9 @@
   "pin": 23,
   "dir": "t1",
   "name": "t1",
-  "timeout": 10,
+  "timeout": 16,
   "sustain": false,
-  "minimum_interval": 1,
+  "minimum_interval": 0,
   "relay_output_pin": null,
   "relay_output_duration": 3,
   "led_enabled": true,
@@ -21,7 +21,7 @@
    30,
    0
   ],
-  "mock": true,
+  "mock": false,
   "mock_period": 12
  },
  {
@@ -30,60 +30,9 @@
   "pin": 26,
   "dir": "t2",
   "name": "t2",
-  "timeout": 10,
+  "timeout": 16,
   "sustain": false,
-  "minimum_interval": 1,
-  "relay_output_pin": null,
-  "relay_output_duration": 3,
-  "led_enabled": true,
-  "base_color_rgb": [
-   25,
-   0,
-   32
-  ],
-  "active_color_rgb": [
-   40,
-   1,
-   40
-  ],
-  "mock": true,
-  "mock_period": 0,
-  "active_color_string": null
- },
- {
-  "verbosity": 1,
-  "vol": -2000,
-  "pin": 27,
-  "dir": "t3",
-  "name": "t3",
-  "timeout": 10,
-  "sustain": false,
-  "minimum_interval": 1,
-  "relay_output_pin": 5,
-  "relay_output_duration": 3,
-  "led_enabled": false,
-  "base_color_rgb": [
-   25,
-   0,
-   32
-  ],
-  "active_color_rgb": [
-   68,
-   60,
-   0
-  ],
-  "mock": true,
-  "mock_period": 12
- },
- {
-  "verbosity": 1,
-  "vol": -2000,
-  "pin": 20,
-  "dir": "t4",
-  "name": "t4",
-  "timeout": 10,
-  "sustain": false,
-  "minimum_interval": 1,
+  "minimum_interval": 0,
   "relay_output_pin": 19,
   "relay_output_duration": 3,
   "led_enabled": false,
@@ -93,11 +42,61 @@
    32
   ],
   "active_color_rgb": [
-   68,
-   60,
+   38,
+   30,
    0
   ],
-  "mock": true,
+  "mock": false,
+  "mock_period": 12
+ },
+ {
+  "verbosity": 1,
+  "vol": -2000,
+  "pin": 27,
+  "dir": "t3",
+  "name": "t3",
+  "timeout": 16,
+  "sustain": false,
+  "minimum_interval": 0,
+  "relay_output_pin": 5,
+  "relay_output_duration": 3,
+  "led_enabled": false,
+  "base_color_rgb": [
+   25,
+   0,
+   32
+  ],
+  "active_color_rgb": [
+   38,
+   30,
+   0
+  ],
+  "mock": false,
+  "mock_period": 12
+ },
+ {
+  "verbosity": 1,
+  "vol": -2000,
+  "pin": 20,
+  "dir": "t4",
+  "name": "t4",
+  "timeout": 16,
+  "sustain": false,
+  "minimum_interval": 0,
+  "relay_output_pin": null,
+  "relay_output_duration": 3,
+  "led_enabled": false,
+  "base_color_rgb": [
+   25,
+   0,
+   32
+  ],
+  "active_color_rgb": [
+   38,
+   30,
+   0
+  ],
+  "mock": false,
   "mock_period": 12
  },
  {
@@ -106,9 +105,9 @@
   "pin": 14,
   "dir": "t5",
   "name": "t5",
-  "timeout": 10,
+  "timeout": 16,
   "sustain": false,
-  "minimum_interval": 1,
+  "minimum_interval": 0,
   "relay_output_pin": 6,
   "relay_output_duration": 3,
   "led_enabled": false,
@@ -118,11 +117,11 @@
    32
   ],
   "active_color_rgb": [
-   68,
-   60,
+   38,
+   30,
    0
   ],
-  "mock": true,
+  "mock": false,
   "mock_period": 12
  },
  {
@@ -131,24 +130,25 @@
   "pin": 2,
   "dir": "t6",
   "name": "t6",
-  "timeout": 10,
+  "timeout": 16,
   "sustain": false,
-  "minimum_interval": 1,
+  "minimum_interval": 0,
   "relay_output_pin": null,
   "relay_output_duration": 3,
-  "led_enabled": false,
+  "led_enabled": true,
   "base_color_rgb": [
    25,
    0,
    32
   ],
   "active_color_rgb": [
-   68,
-   60,
-   0
+   0,
+   30,
+   40
   ],
-  "mock": true,
-  "mock_period": 12
+  "mock": false,
+  "mock_period": 0,
+  "active_color_string": null
  },
  {
   "verbosity": 1,
@@ -158,9 +158,9 @@
   "name": "p1",
   "timeout": 120,
   "sustain": true,
-  "minimum_interval": 20,
+  "minimum_interval": 67,
   "relay_output_pin": null,
-  "relay_output_duration": 4,
+  "relay_output_duration": 18,
   "led_enabled": false,
   "base_color_rgb": [
    25,
@@ -172,8 +172,9 @@
    0,
    77
   ],
-  "mock": true,
+  "mock": false,
   "mock_period": 1400,
+  "active_color_string": null,
   "base_color": [
    25,
    0,
@@ -188,9 +189,9 @@
   "name": "p2",
   "timeout": 120,
   "sustain": true,
-  "minimum_interval": 20,
+  "minimum_interval": 51,
   "relay_output_pin": null,
-  "relay_output_duration": 4,
+  "relay_output_duration": 18,
   "led_enabled": false,
   "base_color_rgb": [
    25,
@@ -202,8 +203,9 @@
    0,
    77
   ],
-  "mock": true,
+  "mock": false,
   "mock_period": 1400,
+  "active_color_string": null,
   "base_color": [
    25,
    0,
@@ -218,9 +220,9 @@
   "name": "p3",
   "timeout": 120,
   "sustain": true,
-  "minimum_interval": 20,
+  "minimum_interval": 41,
   "relay_output_pin": null,
-  "relay_output_duration": 4,
+  "relay_output_duration": 18,
   "led_enabled": false,
   "base_color_rgb": [
    25,
@@ -232,8 +234,9 @@
    0,
    77
   ],
-  "mock": true,
+  "mock": false,
   "mock_period": 1400,
+  "active_color_string": null,
   "base_color": [
    25,
    0,
@@ -248,9 +251,9 @@
   "name": "p4",
   "timeout": 120,
   "sustain": true,
-  "minimum_interval": 20,
+  "minimum_interval": 243,
   "relay_output_pin": null,
-  "relay_output_duration": 4,
+  "relay_output_duration": 18,
   "led_enabled": false,
   "base_color_rgb": [
    25,
@@ -262,8 +265,9 @@
    0,
    77
   ],
-  "mock": true,
+  "mock": false,
   "mock_period": 1400,
+  "active_color_string": null,
   "base_color": [
    25,
    0,
@@ -278,9 +282,9 @@
   "name": "p5",
   "timeout": 120,
   "sustain": true,
-  "minimum_interval": 20,
+  "minimum_interval": 393,
   "relay_output_pin": null,
-  "relay_output_duration": 4,
+  "relay_output_duration": 18,
   "led_enabled": false,
   "base_color_rgb": [
    25,
@@ -292,8 +296,9 @@
    0,
    77
   ],
-  "mock": true,
+  "mock": false,
   "mock_period": 1400,
+  "active_color_string": null,
   "base_color": [
    25,
    0,
@@ -308,9 +313,9 @@
   "name": "p6",
   "timeout": 120,
   "sustain": true,
-  "minimum_interval": 20,
+  "minimum_interval": 31,
   "relay_output_pin": null,
-  "relay_output_duration": 4,
+  "relay_output_duration": 18,
   "led_enabled": false,
   "base_color_rgb": [
    25,
@@ -322,8 +327,9 @@
    0,
    77
   ],
-  "mock": true,
+  "mock": false,
   "mock_period": 1400,
+  "active_color_string": null,
   "base_color": [
    25,
    0,
